added testimonals section

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
+  --color-danger: #ff0000;
 
   --transition: all 400ms ease;
 
@@ -107,6 +108,11 @@ a:hover {
 
 .btn-primary {
   background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+.btn-danger {
+  background: var(--color-danger);
   color: var(--color-bg);
 }
 
