about section corrected

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -18,6 +18,16 @@
   place-items: center;
 }
 
+.about__me-content {
+  margin: 20px 0;
+  background: var(--color-bg-variant);
+  border: 1px solid transparent;
+  border-radius: 1rem;
+  padding: 2rem;
+  text-align: center;
+  transition: var(--transition);
+}
+
 .about__me-image {
   border-radius: 2rem;
   overflow: hidden;
